# remindRest_RUST

./: CLAUDE.md  Cargo.toml  README.md  build.bat  run.bat
.claude/: settings.local.json
src/: main.rs
