[package]
name = "world_hello"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "world_hello"
path = "src/main.rs"

[dependencies]
fastrand = "2"
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
winapi = { version = "0.3", features = ["winuser", "wincon", "winreg"] }
tray-icon = "0.14"
winit = "0.29"
