[package]
name = "world_hello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "world_hello"
path = "src/main.rs"

[dependencies]
fastrand = "2.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4" 

# 【重要】必须升级到 0.29 以确保 ViewportCommand 兼容性
egui = "0.29"
eframe = "0.29"

# 【关键】必须是 0.19+，否则 tray_icon::TrayIconEvent 代码会报错
tray-icon = "0.19"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
# 确保包含了 wincon 和 consoleapi
winapi = { version = "0.3", features = ["winuser", "wincon", "winreg", "consoleapi", "winnt"] }

raw-window-handle = "0.6"